force-app/main/default/objects/CustomTasks__c/CustomTasks__c.object-meta.xml
<CustomObject>
    <description>Custom Tasks object</description>
    <label>Internal Task</label>
    <nameField>
        <displayFormat>Tsk - {0000}</displayFormat>
        <label>InternalTasks Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InternalTasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>