force-app/main/default/objects/CustomTasks__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age of the task between created date and closed date</description>
    <formula>IF( NOT( ISBLANK( Closed_Date__c ) ) ,
 ROUND(Closed_Date__c - CreatedDate,0), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>