force-app/main/default/objects/CustomTasks__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field shows the user/queue to whom is this task assigned</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalTasks</relationshipName>
    <type>Lookup</type>
</CustomField>