force-app/main/default/objects/CustomTasks__c/fields/Call_Comments__c.field-meta.xml
<CustomField>
    <fullName>Call_Comments__c</fullName>
    <description>this field is used for internal comments/notes while closing the task</description>
    <label>Call Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>