force-app/main/default/objects/CustomTasks__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>this field shows the date/time when the custom task was marked as complete</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>