force-app/main/default/objects/CustomTasks__c/fields/Closing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Comments__c</fullName>
    <description>this field is used for internal comments/notes while closing the task</description>
    <label>Closing Comments</label>
    <type>TextArea</type>
</CustomField>