force-app/main/default/objects/CustomTasks__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <formula>RelatedAccount__r.Company_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company ID</label>
    <type>Text</type>
</CustomField>