force-app/main/default/objects/CustomTasks__c/fields/CRM_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Date__c</fullName>
    <label>CRM Date</label>
    <type>DateTime</type>
</CustomField>