force-app/main/default/objects/CustomTasks__c/fields/CRM_P_I_C__c.field-meta.xml
<CustomField>
    <fullName>CRM_P_I_C__c</fullName>
    <label>CRM P.I.C</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRM person in charge for Korea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>