force-app/main/default/objects/CustomTasks__c/fields/Menu_Typed_Date__c.field-meta.xml
<CustomField>
    <fullName>Menu_Typed_Date__c</fullName>
    <label>Menu Typed Date</label>
    <type>DateTime</type>
</CustomField>