force-app/main/default/objects/CustomTasks__c/fields/Next_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Date__c</fullName>
    <description>Task completion due date</description>
    <label>Next Call Date</label>
    <type>DateTime</type>
</CustomField>