force-app/main/default/objects/CustomTasks__c/fields/Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders__c</fullName>
    <formula>RelatedAccount__r.Total_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>