force-app/main/default/objects/CustomTasks__c/fields/Opportunity_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Date__c</fullName>
    <formula>RelatedOpportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Closed Date</label>
    <type>Date</type>
</CustomField>