force-app/main/default/objects/CustomTasks__c/fields/Person_in_Charge_Final_Check__c.field-meta.xml
<CustomField>
    <fullName>Person_in_Charge_Final_Check__c</fullName>
    <label>Person in Charge - Final Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>leeseul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>