force-app/main/default/objects/CustomTasks__c/fields/Person_In_Charge_Take_Online__c.field-meta.xml
<CustomField>
    <fullName>Person_In_Charge_Take_Online__c</fullName>
    <label>Person In Charge - Take Online</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>leeseul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>