force-app/main/default/objects/CustomTasks__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>this field shows the priority of the internal task</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>