force-app/main/default/objects/CustomTasks__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>InternalTasks</relationshipName>
    <type>Lookup</type>
</CustomField>