force-app/main/default/objects/CustomTasks__c/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field shows the Account name to which this task is associated</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>