force-app/main/default/objects/CustomTasks__c/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field shows the Opportunity to which this task is related</description>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>