force-app/main/default/objects/CustomTasks__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <description>this is the case reason for Internal Tasks</description>
    <label>Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Back to Lead Research</fullName>
            </value>
            <value>
                <fullName>Billing / Invoice Request</fullName>
            </value>
            <value>
                <fullName>Invoice Address Change</fullName>
            </value>
            <value>
                <fullName>Business Licensee Change</fullName>
            </value>
            <value>
                <fullName>Expand Target District / Opening time</fullName>
            </value>
            <value>
                <fullName>Keyword Ad Change</fullName>
            </value>
            <value>
                <fullName>Terminal Request</fullName>
            </value>
            <value>
                <fullName>Menu Processing</fullName>
            </value>
            <value>
                <fullName>Menu Change</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Take Restaurant Offline</fullName>
            </value>
            <value>
                <fullName>Late Payment</fullName>
            </value>
            <value>
                <fullName>1st Warning</fullName>
            </value>
            <value>
                <fullName>2nd Warning</fullName>
            </value>
            <value>
                <fullName>Contract Cancellation</fullName>
            </value>
            <value>
                <fullName>Partnership - 1st Warning</fullName>
            </value>
            <value>
                <fullName>Partnership - 2nd Warning</fullName>
            </value>
            <value>
                <fullName>Partnership - 3rd Warning</fullName>
            </value>
            <value>
                <fullName>Partnership - 4th Warning</fullName>
            </value>
            <value>
                <fullName>Result of Deposit Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>