force-app/main/default/objects/CustomTasks__c/fields/Request_Source__c.field-meta.xml
<CustomField>
    <fullName>Request_Source__c</fullName>
    <description>this field shows the case origin for Internal tasks</description>
    <label>Request Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Backend</fullName>
            </value>
            <value>
                <fullName>Call center</fullName>
            </value>
            <value>
                <fullName>e-mail</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>