force-app/main/default/objects/CustomTasks__c/fields/Restaurant_Backend_Id__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Backend_Id__c</fullName>
    <formula>RelatedAccount__r.Backend_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restaurant Backend Id</label>
    <type>Text</type>
</CustomField>