force-app/main/default/objects/CustomTasks__c/fields/Restaurant_Level__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Level__c</fullName>
    <formula>Text(RelatedOpportunity__r.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>