force-app/main/default/objects/CustomTasks__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>This field will be used to inform the result of the Task</description>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Not successful</fullName>
            </value>
            <value>
                <fullName>Back Online</fullName>
            </value>
            <value>
                <fullName>Taken Offline</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Take online not possible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>