force-app/main/default/objects/CustomTasks__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>this indicates the status of the assigned task</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Waiting for reply</fullName>
            </value>
            <value>
                <fullName>Final check</fullName>
            </value>
            <value>
                <fullName>Take online</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>