force-app/main/default/objects/CustomTasks__c/fields/Take_Offline_Date__c.field-meta.xml
<CustomField>
    <fullName>Take_Offline_Date__c</fullName>
    <label>Take Offline Date</label>
    <type>DateTime</type>
</CustomField>