force-app/main/default/objects/CustomTasks__c/fields/Take_Online_Date__c.field-meta.xml
<CustomField>
    <fullName>Take_Online_Date__c</fullName>
    <label>Take Online Date</label>
    <type>DateTime</type>
</CustomField>