force-app/main/default/objects/CustomTasks__c/recordTypes/DH_AU_Task.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Task</fullName>
    <active>true</active>
    <label>DH AU Task</label>
</RecordType>