force-app/main/default/objects/CustomTasks__c/recordTypes/Yogiyo_Entry_Task.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Entry_Task</fullName>
    <active>true</active>
    <label>Yogiyo Entry Task</label>
</RecordType>