force-app/main/default/objects/CustomTasks__c/recordTypes/Yogiyo_Internal_Task.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Internal_Task</fullName>
    <active>true</active>
    <label>Yogiyo Internal Task</label>
</RecordType>