force-app/main/default/objects/CustomTasks__c/recordTypes/Yogiyo_Retention.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Retention</fullName>
    <active>true</active>
    <description>This task will be used to inform Sales team that a contracted rest wants to cancel the contract, so they could try to convince them not to cancel the contract.</description>
    <label>Yogiyo Retention</label>
</RecordType>