force-app/main/default/objects/CustomTasks__c/recordTypes/Yogiyo_Take_Offline_Task.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Take_Offline_Task</fullName>
    <active>true</active>
    <description>This task will be used for taking Restaurants offline</description>
    <label>Yogiyo Take Offline Task</label>
</RecordType>