force-app/main/default/objects/CustomTasks__c/validationRules/Mandatory_Entry_Task_Result.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Entry_Task_Result</fullName>
    <active>true</active>
    <description>Result field should be entered when completing the task</description>
    <errorConditionFormula>AND( Id = &quot;01I11000000DGKv&quot;, ISPICKVAL( Result__c ,&quot;&quot;), ISPICKVAL ( Status__c , &quot;Completed&quot;))</errorConditionFormula>
    <errorDisplayField>Result__c</errorDisplayField>
    <errorMessage>Pleas enter the &apos;Result&apos; of this task</errorMessage>
</ValidationRule>