force-app/main/default/objects/CustomTasks__c/validationRules/Mandatory_Retention_Result.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Retention_Result</fullName>
    <active>true</active>
    <description>When the retention is completed they have to fill up the retention result</description>
    <errorConditionFormula>AND( ISPICKVAL( Request_Reason__c , &quot;Retention&quot;), ISPICKVAL(   Result__c ,&quot;&quot;),  ISPICKVAL( Status__c , &quot;Completed&quot;)  )</errorConditionFormula>
    <errorMessage>Please put the retention result before you complete</errorMessage>
</ValidationRule>