force-app/main/default/objects/CustomTasks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Closed_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>RelatedAccount__c</columns>
    <columns>RelatedOpportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>