force-app/main/default/objects/CustomTasks__c/listViews/DH_AU_Editorial_Team_CustomTasks.listView-meta.xml
<ListView>
    <fullName>DH_AU_Editorial_Team_CustomTasks</fullName>
    <filterScope>Queue</filterScope>
    <label>DH AU Editorial Team</label>
    <queue>DH_AU_Editorial_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>