force-app/main/default/objects/CustomTasks__c/listViews/FI_Customer_Care_CustomTasks.listView-meta.xml
<ListView>
    <fullName>FI_Customer_Care_CustomTasks</fullName>
    <filterScope>Queue</filterScope>
    <label>FI Customer Care</label>
    <queue>FI_Customer_Care</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>