force-app/main/default/objects/CustomTasks__c/listViews/Yogiyo_Business_Planning_CustomTasks.listView-meta.xml
<ListView>
    <fullName>Yogiyo_Business_Planning_CustomTasks</fullName>
    <filterScope>Queue</filterScope>
    <label>Yogiyo Business Planning</label>
    <queue>Yogiyo_Business_Planning</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>