force-app/main/default/objects/CustomTasks__c/listViews/Yogiyo_Customer_Value_Team_CustomTasks.listView-meta.xml
<ListView>
    <fullName>Yogiyo_Customer_Value_Team_CustomTasks</fullName>
    <filterScope>Queue</filterScope>
    <label>Yogiyo Customer Value Team</label>
    <queue>Yogiyo_Customer_Value_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>