force-app/main/default/objects/CustomTasks__c/listViews/Yogiyo_FR_Merchant_Team_CustomTasks.listView-meta.xml
<ListView>
    <fullName>Yogiyo_FR_Merchant_Team_CustomTasks</fullName>
    <filterScope>Queue</filterScope>
    <label>Yogiyo FR Merchant Team</label>
    <queue>Yogiyo_FR_Merchant_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>