force-app/main/default/objects/CustomTasks__c/listViews/Yogiyo_Marketing_Team_CustomTasks.listView-meta.xml
<ListView>
    <fullName>Yogiyo_Marketing_Team_CustomTasks</fullName>
    <filterScope>Queue</filterScope>
    <label>Yogiyo Marketing Team</label>
    <queue>Yogiyo_Marketing_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>